// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render as default 1`] = `
.emotion-0 {
  color: rgb(1, 1, 1);
  text-decoration-color: rgb(1, 1, 1);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: normal;
  font-weight: 700;
  line-height: 1em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

<div>
  <label
    class="emotion-0"
  >
    example
  </label>
</div>
`;

exports[`Label should support trait props 1`] = `
.emotion-0 {
  color: rgb(23, 162, 184);
  text-decoration-color: rgb(23, 162, 184);
  font-family: Helvetica,sans-serif;
  font-kerning: normal;
  font-size: medium;
  font-style: italic;
  font-weight: 400;
  line-height: 1.6em;
  text-align: left;
  text-decoration-line: none;
  text-transform: none;
}

<div>
  <label
    class="emotion-0"
    color="info"
    required=""
  >
    example
  </label>
</div>
`;
